<resources>
    <string name="app_name">FoodMe</string>


    <!-- GENERAL -->
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_account">EditAccountActivity</string>


    <!-- BOTTOM NAVIGATION -->

    <string name="title_find">Find</string>
    <string name="title_restaurants">My Restaurants</string>
    <string name="title_settings">Settings</string>


    <!-- LOG IN ACTIVITY -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_name">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">The phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_recover_password">Forgot your password?</string>
    <string name="text_no_account">I don\'t want an account</string>

    <string name="recover_dialog_title">Forgot password</string>
    <string name="recover_dialog_message">Please enter your email to receive instructions on how to change your password</string>
    <string name="recover_dialog_positive_button">Recover</string>

    <!-- FILTER MENU -->
    <string name="title_very_cheap">$</string>
    <string name="title_cheap">$$</string>
    <string name="title_expensive">$$$</string>
    <string name="title_very_expensive">$$$$</string>

    <!-- SEARCH FRAGMENT -->

    <string name="no_location">We were unable to detect your location. Please turn on location services or set your location in the settings menu.</string>
    <!-- HISTORY FRAGMENT -->

    <string name="history_no_history">You haven\'t visited a restaurant yet! Get browsing!</string>
    <string name="history_no_account">You must create an account for your restaurant history to be saved!</string>

    <!-- HISTORY ACTIVITY -->

    <string name="history_like">Like</string>
    <string name="history_dislike">Dislike</string>



    <!-- SETTINGS FRAGMENT -->

    <string name="settings_header_app">App</string>
    <string name="settings_header_account">Account</string>
    <string name="settings_header_location">Location</string>


    <string name="action_theme">Theme</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_create_account">Create an account or sign in</string>
    <string name="action_manage_account">Manage Account</string>

    <string name="action_location">Set your location</string>


    <string name="theme_dialog_title">Select Theme</string>

    <string-array name="theme_list">
        <item>Classic</item>
        <item>Alternate</item>
        <item>Dark</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_preference">Edit Preference</string>
    <string name="edit_preferences">Edit Search Preferences</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="preferences">Search Preferences</string>
    <string name="add_preference">+</string>
    <string name="history_rate">Rate</string>
    <string name="action_delete_account">Delete account</string>


</resources>
