<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"

    android:orientation="vertical">


    <TextView
        android:id="@+id/settingsAccountHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_teal_a700"
        android:layout_marginBottom="7.5dp"
        android:text="Account" />

    <TextView
        android:id="@+id/noAccountNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create_account" />

    <TextView
        android:id="@+id/settingsAppHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.5dp"
        android:textColor="@color/material_teal_a700"
        android:text="App" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_theme" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_sign_out" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>